add_executable(hello_orkige main.cpp)

target_link_libraries(hello_orkige PRIVATE Orkige::Engine)

# Demo-only: point the sample at the RTSS shader library that ships with the
# vcpkg-installed OGRE so it runs straight out of the build tree. Real games
# ship their own media and use a resources.cfg instead.
# Sprite atlas (demo_sprite_atlas.png/.oatlas) for the ORKIGE_DEMO_SPRITEATLAS
# selfcheck: pack a few committed jumper textures with Util/make_sprite_atlas.py
# into the build tree (regenerated only when the packer or an input changes).
# find_program honours CMAKE_IGNORE_PREFIX_PATH (see the jumper atlas note).
find_program(ORKIGE_PYTHON3 NAMES python3 HINTS /usr/bin REQUIRED)
set(ORKIGE_SPRITE_ATLAS_DIR "${CMAKE_CURRENT_BINARY_DIR}/sprite_atlas")
set(ORKIGE_SPRITE_ATLAS_INPUTS
    "${Orkige_SOURCE_DIR}/samples/jumper/media/crate.png"
    "${Orkige_SOURCE_DIR}/samples/jumper/media/player.png"
    "${Orkige_SOURCE_DIR}/samples/jumper/media/platform.png")
add_custom_command(
    OUTPUT "${ORKIGE_SPRITE_ATLAS_DIR}/demo_sprite_atlas.oatlas"
           "${ORKIGE_SPRITE_ATLAS_DIR}/demo_sprite_atlas.png"
    COMMAND "${ORKIGE_PYTHON3}"
        "${Orkige_SOURCE_DIR}/Util/make_sprite_atlas.py"
        "${ORKIGE_SPRITE_ATLAS_DIR}" demo_sprite_atlas
        ${ORKIGE_SPRITE_ATLAS_INPUTS}
    DEPENDS "${Orkige_SOURCE_DIR}/Util/make_sprite_atlas.py"
            "${Orkige_SOURCE_DIR}/Util/orkige_png.py"
            ${ORKIGE_SPRITE_ATLAS_INPUTS}
    COMMENT "Generating demo sprite atlas (demo_sprite_atlas.oatlas/.png)"
    VERBATIM)
add_custom_target(hello_orkige_sprite_atlas
    DEPENDS "${ORKIGE_SPRITE_ATLAS_DIR}/demo_sprite_atlas.oatlas")
add_dependencies(hello_orkige hello_orkige_sprite_atlas)

# gui atlas for the ORKIGE_DEMO_UI_SCALE selfcheck (the same generator the
# games use); packed into the build tree, regenerated when the script changes.
# Flavor-independent, so hello builds on BOTH render flavors without the
# classic-only jumper sample that owns the shared media copy.
set(ORKIGE_GUI_ATLAS_DIR "${CMAKE_CURRENT_BINARY_DIR}/gui")
add_custom_command(
    OUTPUT "${ORKIGE_GUI_ATLAS_DIR}/gui_default.ogui"
           "${ORKIGE_GUI_ATLAS_DIR}/gui_default.png"
    COMMAND "${ORKIGE_PYTHON3}"
        "${Orkige_SOURCE_DIR}/Util/make_gui_atlas.py"
        "${ORKIGE_GUI_ATLAS_DIR}"
    DEPENDS "${Orkige_SOURCE_DIR}/Util/make_gui_atlas.py"
    COMMENT "Generating hello_orkige gui atlas (gui_default.ogui/.png)"
    VERBATIM)
add_custom_target(hello_orkige_gui_atlas
    DEPENDS "${ORKIGE_GUI_ATLAS_DIR}/gui_default.ogui")
add_dependencies(hello_orkige hello_orkige_gui_atlas)

target_compile_definitions(hello_orkige PRIVATE
    ORKIGE_DEMO_MEDIA_DIR="${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/share/ogre/Media"
    # demo assets (test_mesh.glb, generated by Util/make_test_mesh.py)
    ORKIGE_DEMO_ASSET_DIR="${CMAKE_CURRENT_SOURCE_DIR}/media"
    # the shared engine water media (water_plane.glb + water_normal.png,
    # generated by Util/make_water_mesh.py) the ORKIGE_DEMO_WATER selfcheck
    # registers so a WaterComponent can build its surface
    ORKIGE_ENGINE_WATER_DIR="${Orkige_SOURCE_DIR}/orkige_engine/media/water"
    # a committed texture for the ORKIGE_DEMO_SPRITEANIM flipbook selfcheck
    # (any texture resolves; the check reads UV rects, not pixels)
    ORKIGE_SPRITE_TEXTURE_DIR="${Orkige_SOURCE_DIR}/samples/jumper/media"
    # the generated sprite atlas dir for the ORKIGE_DEMO_SPRITEATLAS selfcheck
    ORKIGE_SPRITE_ATLAS_DIR="${ORKIGE_SPRITE_ATLAS_DIR}"
    # the gui atlas dir the ORKIGE_DEMO_UI_SCALE selfcheck loads to build
    # real widgets (generated into the build tree below - flavor-independent,
    # so hello builds on BOTH render flavors without the classic-only jumper)
    ORKIGE_DEMO_GUI_ATLAS_DIR="${ORKIGE_GUI_ATLAS_DIR}"
    # the ORKIGE_DEMO_TTF selfcheck: a committed runtime-baked atlas
    # (gui_ttf_demo.ogui + ui_star.svg) under the demo media dir, and the
    # engine-default TrueType face it references (Nunito, SIL OFL)
    ORKIGE_DEMO_TTF_ATLAS_DIR="${CMAKE_CURRENT_SOURCE_DIR}/media"
    ORKIGE_ENGINE_FONT_DIR="${Orkige_SOURCE_DIR}/orkige_engine/media/fonts"
    # the ORKIGE_DEMO_OUI selfcheck: the committed declarative settings screen
    # (settings_screen.oui) loaded through GuiFactory::loadLayout
    ORKIGE_DEMO_OUI_DIR="${CMAKE_CURRENT_SOURCE_DIR}/media"
    # the ORKIGE_DEMO_LOC selfcheck: the committed XLIFF localisation registry
    # (loc/en.xlf + de.xlf + the generated en-XA.xlf pseudo-locale) the runtime
    # loads to resolve loc_demo.oui's @key captions across languages
    ORKIGE_DEMO_LOC_DIR="${CMAKE_CURRENT_SOURCE_DIR}/loc"
)
